--- a/css/screen.css
+++ b/css/screen.css
@@ -614,35 +614,30 @@ body.leistungen article {
       clear: both;
       content: "";
       display: table; } }
-#portfolio .portfolio-item {
-  /*        @media screen and (min-width:960px){
-              @include span-columns(3);
-              @include omega(4n);
-          }*/ }
-  @media screen and (min-width: 480px) and (max-width: 600px) {
-    #portfolio .portfolio-item {
-      float: left;
-      display: block;
-      margin-right: 2.35765%;
-      width: 48.82117%; }
-      #portfolio .portfolio-item:last-child {
-        margin-right: 0; }
-      #portfolio .portfolio-item:nth-child(2n) {
-        margin-right: 0; }
-      #portfolio .portfolio-item:nth-child(2n+1) {
-        clear: left; } }
-  @media screen and (min-width: 601px) {
-    #portfolio .portfolio-item {
-      float: left;
-      display: block;
-      margin-right: 2.35765%;
-      width: 31.76157%; }
-      #portfolio .portfolio-item:last-child {
-        margin-right: 0; }
-      #portfolio .portfolio-item:nth-child(3n) {
-        margin-right: 0; }
-      #portfolio .portfolio-item:nth-child(3n+1) {
-        clear: left; } }
+@media screen and (min-width: 480px) and (max-width: 600px) {
+  #portfolio .portfolio-item {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 48.82117%; }
+    #portfolio .portfolio-item:last-child {
+      margin-right: 0; }
+    #portfolio .portfolio-item:nth-child(2n) {
+      margin-right: 0; }
+    #portfolio .portfolio-item:nth-child(2n+1) {
+      clear: left; } }
+@media screen and (min-width: 601px) {
+  #portfolio .portfolio-item {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 31.76157%; }
+    #portfolio .portfolio-item:last-child {
+      margin-right: 0; }
+    #portfolio .portfolio-item:nth-child(3n) {
+      margin-right: 0; }
+    #portfolio .portfolio-item:nth-child(3n+1) {
+      clear: left; } }
 
 #header nav {
   text-transform: uppercase;
@@ -1087,7 +1082,8 @@ body.leistungen article .thumbnail {
     background: #000; }
   .portfolio-item > .portfolio-thumbnail {
     background: #000;
-    display: block; }
+    display: block;
+    padding: 0; }
   .portfolio-item > .portfolio_content {
     text-align: center;
     padding: 2em;
@@ -1121,7 +1117,10 @@ body.leistungen article .thumbnail {
         right: 100%; } }
   .portfolio-item:hover, .portfolio-item:focus {
     overflow: visible;
-    cursor: pointer; }
+    cursor: pointer;
+    -webkit-transition: all 2s ease-in-out;
+    -moz-transition: all 2s ease-in-out;
+    transition: all 2s ease-in-out; }
     .portfolio-item:hover > .portfolio_content, .portfolio-item:focus > .portfolio_content {
       z-index: 99;
       opacity: 1; }
@@ -1130,7 +1129,7 @@ body.leistungen article .thumbnail {
           left: 100%;
           right: -107%; } }
     .portfolio-item:hover > .portfolio-thumbnail, .portfolio-item:focus > .portfolio-thumbnail {
-      border: 0.5em solid #000; }
+      padding: .5em; }
       .portfolio-item:hover > .portfolio-thumbnail .grayscale, .portfolio-item:focus > .portfolio-thumbnail .grayscale {
         -webkit-filter: grayscale(0);
         filter: grayscale(0); }
