--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -31,12 +31,13 @@ h5,
 h6{
     font-family: $headings-font-family;
     line-height: 1.1;
+
     font-weight:400;
     color: $heading-text-color;
     @media screen and (min-width:$screen-md){
         margin: 0 0 3 * $paragraph-margin;   
     }
-    body.home &{
+    #home &{
         color:white !important;
         margin:0;
     }
@@ -60,7 +61,7 @@ h6{
         }
         text-transform: uppercase;
         line-height: 1;
-        letter-spacing: -.025em;
+        letter-spacing:.025em;
         font-weight:900;
         > span {color:$primary-color;}
     }
@@ -71,7 +72,8 @@ h6{
         font-size: 1.25em;
         margin:0;
     }
-    body.leistungen article &{
+    body.leistungen article &,
+    section#leistungen article &{
         font-size: 1.2em;
         color:$primary-color;
         margin:0 0 0.5 * $paragraph-margin 0;
@@ -83,6 +85,7 @@ h6{
     }
 }
 .copyright{
+    padding:1em 0;
     color:white;
     font-size: 1.25em;
     font-family: $headings-font-family;
@@ -94,13 +97,6 @@ h6{
         font-weight:400;
         @media screen and (min-width:$screen-md){float: right;}
         
-        .home & {
-            display: block;
-            text-align: center;
-            float: none;
-            line-height: 2;
-            margin-top: 2em;
-        }
     }
     .copyright-text{float: left;}
 // paragraph text
@@ -132,6 +128,7 @@ p {
         line-height: 1;
         margin-bottom: 0;
         color:$base-color-white;
+        letter-spacing:.055em;
         @media screen and (max-width:$screen-xs){
             font-size:$rem-base * 0.875;
         }
