--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -17,5 +17,5 @@
 @import "content/_content";
 @import "content/_portfolio";
 @import "content/_media";
-//@import "base/_ie";
+@import "base/_ie";
 @import "_shame.scss";
