--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -20,5 +20,6 @@ $vgrid:20px;
 $footerHeight:66px;
 $footerHomeHeight:87px;
 
+$desktopHeaderHeight:170px;
 $mobileHeaderHeight:40px;
 $headerBorderWidth:4px;
