--- a/sass/content/_content.scss
+++ b/sass/content/_content.scss
@@ -1,5 +1,5 @@
 article{
-    body.home &{
+    #home &{
         @media screen and (max-width:$screen-smallPad){
             @media screen and (orientation:portrait){
                 h1 { 
@@ -46,12 +46,13 @@ article{
         @media screen and (min-width:$screen-md){
             h1 { 
                 margin:12% 3em;
-                margin:12vH 3em;
+                margin:20vH 3em;
             }
         }
     }
 
-    body.leistungen &{
+    body.leistungen &,
+    #leistungen &{
         .thumbnail{
             background: transparent;
             border:0;
