--- a/sass/content/_layout.scss
+++ b/sass/content/_layout.scss
@@ -1,80 +1,59 @@
-/* Sticky Footer */
-html{
-    position: relative;
-    min-height: 100%;
-}
 body {
-
     @media screen and (min-width:$screen-sm){
-        &.home{
-            margin-bottom: $footerHomeHeight;
-            > .footer {
-                height:$footerHomeHeight;
-            }
-        }
-        &:not(.kontakt){
-            margin-bottom: $footerHeight;  
+        &:not(.kontakt){ 
             > footer{
                 height:$footerHeight;
-                width: 100vW;
-                position: absolute;
-                bottom: 0;       
+                width: 100vW;     
             }
         }
     }
 }
-/* end sticky footer */
 /*Layout Home */
 body{
     &.home{
-        height:100%;
-        height:100vH;
-        position: relative;
-        overflow:hidden;
-        background:{
-            color:rgba(0,0,0,1);
-            repeat:no-repeat;
-        }
-        @media screen and (max-width:$screen-smallPad){
-            @media screen and (orientation:portrait){
-                background-size:contain;
-                 background-position:50% 70%; 
+        #home {
+            & ~ #portfolio,
+            & ~ #leistungen,
+            & ~ #team{
+                padding:100px 0;
             }
-             @media screen and (orientation:landscape){
-                 background-size:cover;
-                 background-position:50% 0%; 
-             }
-        }
-        @media screen and (min-width:$screen-smallPad) and (max-width:$screen-sm){
-            @media screen and (orientation:landscape){
+            height:100vH;
+            padding-top:$desktopHeaderHeight;
+            position:relative;
+            @media screen and (max-width:$screen-smallPad){
+                @media screen and (orientation:portrait){
+                    background-size:contain;
+                    background-position:50% 70%; 
+                }
+                @media screen and (orientation:landscape){
+                    background-size:cover;
+                    background-position:50% 0%; 
+                }
+            }
+            @media screen and (min-width:$screen-smallPad) and (max-width:$screen-sm){
+                @media screen and (orientation:landscape){
+                    background-size:cover;
+                    background-position:50% 0%;
+                }
+                @media screen and (orientation:portrait){
+                    background-size:contain;
+                    background-position:50% 50%;
+                }
+            }
+            @media screen and (min-width:$screen-sm + 1) and (max-width:$screen-md){
                 background-size:cover;
-                background-position:50% 0%;
-            }
-            @media screen and (orientation:portrait){
-                background-size:contain;
                 background-position:50% 50%;
             }
+            @media screen and (min-width:$screen-md){
+                background-size:cover;
+                background-position:50% 25%;
+            }
         }
-        @media screen and (min-width:$screen-sm + 1) and (max-width:$screen-md){
-            background-size:cover;
-            background-position:50% 50%;
-        }
-         @media screen and (min-width:$screen-md){
-            background-size:cover;
-            background-position:50% 25%;
-        }
-        > .footer {
+        .footer-home{
             position: absolute;
-            width: 100%;
-            @media screen and (max-width:$screen-smallPad){
-                bottom:1em;
-                * {font-size:1rem;}
-            }
-
-            @media screen and (min-width:$screen-smallPad) and (max-width:$screen-md){
-                bottom: 1.2em; 
-                * {font-size:1rem;}
-            }
+            bottom: 1em;
+            left: 0;
+            right: 0;
         }
     }
     &:not(.home) {
@@ -86,32 +65,16 @@ body{
                 background: white; 
             }
         }
-        > main {
-            @media screen and (max-width:$screen-maxPhone){
-                .post_content{
-/*                    padding:1em 2em;*/
-                }
-            }
-        }
-        > .footer {
-            background:$primary-color;
-            * {color:$base-color-white;}
-            .impressum{padding-top:2 * $vgrid;}
-            @media screen and (max-width:$screen-maxPhone){
-                padding:0 2em;
-            }
-        }
     }
     &.kontakt, &.leistungen{
         > main {
-            background: $base-bg-color!important;
-            padding-top:5.3em;
+            @include grey-background;
         }
     }
     .intro{
         margin-bottom: 1.5 * $vgrid;
         @media screen and (min-width:$screen-xs) and (orientation:portrait){
-         padding:0;
+            padding:0;
         }
         @media screen and (min-width:$screen-xs) and (max-width:$screen-sm){
             padding:1em 2em;
@@ -121,53 +84,59 @@ body{
             margin:0;
         }
     }
+
+    .footer {
+        @include footer-background;
+        .impressum{padding-top:2 * $vgrid;}
+        @media screen and (max-width:$screen-maxPhone){
+            padding:0 2em;
+        }
+    }
 }
+
+#leistungen, #kontakt, .contact-map {
+    @include grey-background;
+}
+#impressum{
+    @include footer-background;
+    .columns {
+        @include columns;
+    }
+}
+
 .container{
     #header &{
         padding:0;
     }
-    #portfolio {
+    #portfolio-liste {
         @media screen and (max-width:$screen-md){
             padding:0 2em;
         }
     }
-    &.related.bottom-fold {
-        margin-top:2em;
-    }
+    /*    &.related.bottom-fold {
+            margin-top:2em;
+        }*/
 }
+
 #header {
-    .logo {
-        a {
-            display: block;
-            background-color:transparent;
-            background-repeat:no-repeat;
-            background-position: top right;
-            width:100%;
-            height:0;
-            padding:0;
-            background-size: contain;
-            @media screen and (min-width:$screen-xs) and (max-width:$screen-md){ 
-                padding-bottom:calc(45% * 1/3);
-            }
-            @media screen and (max-width:$screen-xs){padding-bottom:calc(100% * 1/3);}
-            @media screen and (min-width:$screen-md){ 
-                padding-bottom:calc(100% * 1/3);
-            }
-
-            body.home & {
-                background-image: url('../svg/logo-white.svg');
-            }
-            body:not(.home) & {
-                background-image: url('../svg/logo.svg');
-            }
-            @media screen and (min-width:$screen-xs) and (max-width:$screen-sm){
-
-            }
-            @media screen and (min-width:$screen-md){
-
-            }
+    body.home & {
+        position: fixed;
+        top: 0;
+        right: 0;
+        z-index:999;
+        width: 100%;
+        &.row{
+            background: transparent;
+            @include transition(all 800ms ease-in-out);
         }
-        span{display:none;}
+        &.sticky {
+            background:white;
+            @include transition(all 800ms ease-in-out);
+        }
+    }
+
+    @media screen and (min-width:$screen-md){
+        height: $desktopHeaderHeight;
     }
     /** white block above **/
     .container:before{
@@ -217,19 +186,48 @@ body{
     }
     @media screen and (min-width:$screen-xs) and (max-width:$screen-smallPad){
         .logo a {
-                background-size: 35% auto;
-                padding-bottom:calc(35% * 1/3);
-            }
+            background-size: 35% auto;
+            padding-bottom:calc(35% * 1/3);
+        }
     }
     @media screen and (min-width:$screen-smallPad) and (max-width:$screen-sm + 1){
         .logo a {
-                background-size: 50% auto;
-                padding-bottom:calc(50% * 1/3);
-            }
+            background-size: 50% auto;
+            padding-bottom:calc(50% * 1/3);
+        }
     }
     @media screen and (min-width:$screen-md ){
         .logo, .nav {
             margin-top:32px;
         }
     }
+}
+
+.logo {
+    margin:0;
+    a {
+        display: block;
+        background-color:transparent;
+        background-repeat:no-repeat;
+        background-position: top right;
+        width:100%;
+        padding:0;
+        background-size: contain;
+        @media screen and (max-width:$screen-md){
+            height:70px;
+        }
+        @media screen and (min-width:$screen-xs) and (max-width:$screen-sm){
+            height:120px;
+        }
+        @media screen and (min-width:$screen-md){
+            height:120px;
+        }
+        body.home #header:not(.sticky) & {
+            background-image: url('../svg/logo-white.svg');
+        }
+        body:not(.home) #header &, body.home #header.sticky & {
+            background-image: url('../svg/logo.svg');
+        }
+    }
+    span{display:none;}
 }
