--- a/sass/content/_navigation.scss
+++ b/sass/content/_navigation.scss
@@ -1,6 +1,7 @@
 #header nav {
     text-transform: uppercase;
-    font-size: 1rem * 1.125;
+    font-size: 1rem;
+    letter-spacing:.065em;
     @media screen and (max-width:$screen-xs){
         top:0px;
     }
@@ -69,39 +70,40 @@
         }
 
     }
-    li.menu-item{
-        a {
-            display: block;
-            color:$dark-color-grey;
-            font-weight:bold;
-            @media screen and (min-width:$screen-md){
-                line-height: 1; 
-                border-top:3px solid transparent;
-            }
-            @media screen and (min-width:$screen-md)and (max-width:$screen-lg){
-                padding:1rem .6em 0 .6em;
-            }
-            @media screen and (min-width:$screen-lg){
-                padding:1rem 1.2em 0 1.2em;
-            }
-            @media screen and (min-width:$screen-md){
-                body.home &, body.home &:hover {
-                    color:white;
-                }
-            }
-            &:hover {
-                text-decoration: none;
-                color:$primary-color;
-                border-color:currentColor;
+}
+
+li.menu-item{
+    a {
+        display: block;
+        color:$dark-color-grey;
+        font-weight:bold;
+        @media screen and (min-width:$screen-md){
+            line-height: 1; 
+            border-top:3px solid transparent;
+        }
+        @media screen and (min-width:$screen-md)and (max-width:$screen-lg){
+            padding:1rem .6em 0 .6em;
+        }
+        @media screen and (min-width:$screen-lg){
+            padding:1rem 1.2em 0 1.2em;
+        }
+        @media screen and (min-width:$screen-md){
+            body.home #header:not(.sticky) &, body.home #header:not(.sticky) &:hover {
+                color:white;
             }
         }
-        &.current-menu-item{
-            svg {fill:$primary-color;}
-            a{
-                color:$primary-color;
-                @media screen and (min-width:$screen-md){
-                    border-top:3px solid currentColor;
-                }
+        &:hover {
+            text-decoration: none;
+            color:$primary-color;
+            border-color:currentColor;
+        }
+    }
+    &.current-menu-item{
+        svg {fill:$primary-color;}
+        a{
+            color:$primary-color;
+            @media screen and (min-width:$screen-md){
+                border-top:3px solid currentColor;
             }
         }
     }
@@ -111,7 +113,7 @@ nav.nav.open {
     @include transition;
     min-height:340px;
     overflow:scroll;
-        @media screen and (min-width:$screen-xs) and (max-width:$screen-md){
+    @media screen and (min-width:$screen-xs) and (max-width:$screen-md){
         width:50% !important;
     }
 }
@@ -150,8 +152,8 @@ nav.nav {
         .no-svg & svg{display:none;}
     }
     .no-svg .fallback{
-              @include size(40px);
-              display: block;
+        @include size(40px);
+        display: block;
     }
     .no-svg .home-btn.mobile-layout .fallback{
         background: $base-color-white url('../img/home-btn.gif') center center no-repeat / auto 25px;
@@ -170,26 +172,26 @@ nav.nav {
 }
 
 #pagination{
-	margin: $vgrid 0 0 0;
-	padding: $vgrid 0 0 0;
-	text-align: center;
-	
-	svg{
-		display: block;
-		margin: 1em auto;
-		height: 3px;
-		width: 100%;
-	}
+    margin: $vgrid 0 0 0;
+    padding: $vgrid 0 0 0;
+    text-align: center;
 
-	span, a{
-		font-weight: bold;
-		@include size(20px);
-		display: inline-block;
-		color: $dark-color-grey;
-	}
-	span.current{color: $primary-color;
-	}
-	.next, .prev{
-		@extend %text-indent;
-	}
+    svg{
+        display: block;
+        margin: 1em auto;
+        height: 3px;
+        width: 100%;
+    }
+
+    span, a{
+        font-weight: bold;
+        @include size(20px);
+        display: inline-block;
+        color: $dark-color-grey;
+    }
+    span.current{color: $primary-color;
+    }
+    .next, .prev{
+        @extend %text-indent;
+    }
 }
