--- a/sass/content/_portfolio.scss
+++ b/sass/content/_portfolio.scss
@@ -59,8 +59,8 @@
             z-index: 99;
             opacity: 1;
             @media screen and (min-width:$screen-xs + 1){
-            left:100%;
-            right:-107%;
+                left:100%;
+                right:-110%;
             }
         }
         > .portfolio-thumbnail{
@@ -72,20 +72,28 @@
             .grayscale-replaced > svg {opacity: 0;}
         }
         @media screen and (min-width:$screen-xs) and (max-width:$screen-sm){
-		    &:nth-child(2n){
-		        .portfolio_content{
-		            left: -107%;
-		            right: 100%;
-		        }
-		    }
-		}
-		@media screen and (min-width:$screen-sm){
-		    &:nth-child(3n){
-		        .portfolio_content{
-		            left: -107%;
-		            right: 100%;
-		        }
-		    }
-		}
+            &:nth-child(2n){
+                .portfolio_content{
+                    left: calc(-106% - 10px);
+                    right: 100%;
+                }
+            }
+        }
+        @media screen and (min-width:$screen-sm) and (max-width:960px - 1px){
+            &:nth-child(3n){
+                .portfolio_content{
+                    left: calc(-106% - 10px);
+                    right: 100%;
+                }
+            }
+        }
+        @media screen and (min-width:960px){
+            &:nth-child(4n){
+                .portfolio_content{
+                    left: calc(-106% - 10px);
+                    right: 100%;
+                }
+            }
+        }
     }
 }
