--- a/sass/snippet.scss
+++ b/sass/snippet.scss
@@ -1,13 +1,47 @@
-/**** Portfolio ****/
-.portfolio-item{
+#header {
+  
 
-
-	&:hover, &:focus{
-		
-		
-
-		
-		
-	}/** End hover/focus **/
+    
+    
+   
+    @media screen and (min-width:$screen-smallPad) and (max-width:$screen-sm + 1){
+        .logo a {
+            background-size: 50% auto;
+            padding-bottom:calc(50% * 1/3);
+        }
+    }
+    
 }
+.logo {
+    a {
+        display: block;
+        background-color:transparent;
+        background-repeat:no-repeat;
+        background-position: top right;
+        width:100%;
+        height:0;
+        padding:0;
+        background-size: contain;
+        @media screen and (min-width:$screen-xs) and (max-width:$screen-md){ 
+            padding-bottom:calc(45% * 1/3);
+        }
+        @media screen and (max-width:$screen-xs){padding-bottom:calc(100% * 1/3);}
+        @media screen and (min-width:$screen-md){ 
+            padding-bottom:calc(100% * 1/3);
+        }
 
+        body.home #header:not(.sticky) & {
+            background-image: url('../svg/logo-white.svg');
+        }
+        body:not(.home) #header &, body.home #header.sticky & {
+            background-image: url('../svg/logo.svg');
+        }
+        @media screen and (min-width:$screen-xs) and (max-width:$screen-sm){
+
+        }
+        @media screen and (min-width:$screen-md){
+
+        }
+    }
+    span{display:none;}
+}
