--- a/css/screen.css
+++ b/css/screen.css
@@ -1247,7 +1247,7 @@ body.leistungen article .thumbnail, #leistungen article .thumbnail {
         top: 50%; } }
     @media screen and (min-width: 992px) {
       [class*="flex-nav"] > a.flex-prev, [class*="flex-nav"] > a.flex-next {
-        top: 320px; } }
+        top: 50%; } }
   [class*="flex-nav"] > a.flex-prev:before {
     -webkit-transform: rotate(180deg);
     -moz-transform: rotate(180deg);
@@ -1271,5 +1271,34 @@ body.ie{*/
 
 /*}*/
 /** End Portfolio Hacks ***/
+.flexslider .slides li.item-img div {
+  height: 500px;
+  width: 100%;
+  background: #eee;
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  box-pack: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  -o-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  box-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
+  align-items: center;
+  -ms-flex-align: center; }
 
 /*# sourceMappingURL=screen.css.map */
