--- a/flexslider/flexslider.css
+++ b/flexslider/flexslider.css
@@ -49,8 +49,8 @@
   -webkit-backface-visibility: hidden;
 }
 .flexslider .slides img {
-  width: 100%;
-  display: block;
+/*  width: 100%;
+  display: block;*/
 }
 .flexslider .slides:after {
   content: "\0020";
