--- a/sass/content/_media.scss
+++ b/sass/content/_media.scss
@@ -17,16 +17,40 @@
 .flexslider{
     border:0;
     margin:0;
+    @include border-radius(0);
     
     aside img {width:100%;max-width:none;height:auto;}
+    
+    .portfolio & {
+        overflow:hidden;
+        @media screen and (max-width:$screen-xs){
+            height: 250px;
+        }
+        @media screen and (min-width:$screen-xs + 1) and (max-width:$screen-md - 1){
+            height: 328px;
+        }
+        @media screen and (min-width:$screen-md){
+            height: 480px;
+        }
+        
+        overflow: hidden;
+    }
 }
 .flex-control-nav{
-    bottom:1em;
+    text-align: left;
+    @media screen and (min-width:$screen-md){
+        bottom:5%;
+        left:5%;
+        right:5%;
+        width:90%;
+    }
     body.page & {display:none;}
     &.flex-control-paging li a{
-        background:rgba(0,0,0,.5) !important;
+        height:5px;
+        width:5px;
+        background:rgba(255,255,255,1) !important;
         &.flex-active{
-            background:rgba(0,0,0,1)!important;
+            background:rgba(255,255,255,.5)!important;
         }
     }
 }
@@ -36,29 +60,36 @@
         
         &:before{
             content:'' !important;
-            background: rgba(255,255,255,.5) url("../svg/flex-nav.svg") no-repeat center center;
-            background-size: 25%;
-            height:100%;
-            width:100%;
-
+            @include circle(60px);
+            background: transparent url(../svg/flex-nav.svg) no-repeat 60% 60% / 20%;
+        }
+        .page &:before{
+            background-color: $primary-color !important;
         }
         &.flex-prev{         
             /** ToDO**/
             @media screen and (orientation:landscape){
                 .single & {left:0;}
-                [class*="subpages"] & {left:calc(50% + 24px) !important;}   
+                [class*="subpages"] & {left:calc(40% + 40px) !important;}   
             }
         }
         &.flex-prev, &.flex-next{
-            @media screen and (max-width:$screen-md - 1){top:50%;}
-            @media screen and (min-width:$screen-md){top:50%;}
+            .portfolio & {}
+            [class*="subpages"] & {
+                @media screen and (max-width:$screen-md - 1){top:40%;}
+                @media screen and (min-width:$screen-md){top:40%;}
+            }
+            
             bottom:auto;
         }
         &.flex-prev:before{
             @include rotate(180deg);
         }
+        &.flex-next:before{
+            background-position: 50% 40% !important;
+        }
         @include circle(50px);
-        font-size: 0;
+/*        font-size: 0px;*/
         line-height: 0;
     }
 }
