--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -23,3 +23,6 @@ $footerHomeHeight:87px;
 $desktopHeaderHeight:170px;
 $mobileHeaderHeight:40px;
 $headerBorderWidth:4px;
+
+//Typo
+$letter-spacing:.0015em;
