--- a/sass/content/_content.scss
+++ b/sass/content/_content.scss
@@ -5,14 +5,14 @@ article{
                 h1 { 
                     margin-top:50%;
                     margin-top:50vH;
-                    
+
                 }
             }
             @media screen and (orientation:landscape){
                 h1 { 
                     margin-top:45%;
                     margin-top:45vH;
-                    
+
                     font-size: 1rem;
                 }
             }
@@ -78,6 +78,45 @@ article{
     @media screen and (max-width:$screen-xs) and (orientation:portrait){
         padding:0 2em;
     }
+    @media screen and (min-width:$screen-md){
+        & > .btn{
+            display:block;
+            height:18px;
+            width:18px;
+            float: right;
+            background: transparent url(../svg/pfeil-xs.svg) no-repeat center center / contain;
+            @include transform-origin(center center);
+            @include transform(rotate(-90deg));
+            &:hover{
+                cursor: pointer;
+/*                @include transform(rotate(90deg));*/ 
+            }
+        }
+        & > div {
+            height:auto;
+            @include transition(height 800ms ease-in-out);
+        }
+        & > div.hide{
+            height:445px;
+            @include transition(height 800ms ease-in-out);
+            overflow:hidden;
+            position:relative;
+            &:after{
+                content: '';
+                display:block;
+                height:5em;
+                position:absolute;
+                @include linear-gradient(transparent,white);
+                bottom:0;
+                left:0;
+                width:100%;
+            }
+            & + .btn {
+                @include transform(rotate(90deg));
+            }
+        }
+    }
+
 }
 .contact-map{
     .iframe-elastic{
