--- a/sass/content/_layout.scss
+++ b/sass/content/_layout.scss
@@ -1,20 +1,10 @@
-body {
-    @media screen and (min-width:$screen-sm){
-        &:not(.kontakt){ 
-            > footer{
-                height:$footerHeight;
-                width: 100vW;     
-            }
-        }
-    }
-}
 /*Layout Home */
 body{
     &.home{
         #home {
             & ~ #portfolio,
             & ~ #leistungen,
-            & ~ #team{
+            & ~ #ueber-uns{
                 padding:100px 0;
             }
             height:100vH;
@@ -63,6 +53,13 @@ body{
             }
             .logo {
                 background: white; 
+            }
+        }
+        > main {
+            @media screen and (min-width:$screen-md){
+                margin:$vgrid 0;
+                min-height:600px;
+                display:block;
             }
         }
     }
