--- a/css/screen.css
+++ b/css/screen.css
@@ -931,37 +931,15 @@ nav.nav.open {
 body.home #home {
   background-repeat: no-repeat;
   background-color: #000;
+  background-size: cover;
+  background-position: 50% 50%;
   height: 100vH;
-  padding-top: 170px;
   position: relative; }
   body.home #home ~ #portfolio, body.home #home ~ #leistungen, body.home #home ~ #ueber-uns {
     padding: 100px 0; }
-@media screen and (max-width: 600px) and (orientation: portrait) {
-  body.home #home {
-    background-size: contain;
-    background-position: 50% 50%; } }
-@media screen and (max-width: 600px) and (orientation: landscape) {
-  body.home #home {
-    background-size: cover;
-    background-position: 50% 0%; } }
-
-@media screen and (min-width: 600px) and (max-width: 768px) and (orientation: landscape) {
-  body.home #home {
-    background-size: cover;
-    background-position: 50% 0%; } }
-@media screen and (min-width: 600px) and (max-width: 768px) and (orientation: portrait) {
-  body.home #home {
-    background-size: contain;
-    background-position: 50% 50%; } }
-
-  @media screen and (min-width: 769px) and (max-width: 992px) {
-    body.home #home {
-      background-size: cover;
-      background-position: 50% 50%; } }
   @media screen and (min-width: 992px) {
     body.home #home {
-      background-size: cover;
-      background-position: 50% 25%; } }
+      padding-top: 170px; } }
 body.home .footer-home {
   position: absolute;
   bottom: 1em;
@@ -1130,25 +1108,22 @@ body .footer {
   .logo span {
     display: none; }
 
-@media screen and (max-width: 600px) and (orientation: portrait) {
+@media screen and (max-width: 600px) {
   #home article h1 {
-    margin-top: 50%;
-    margin-top: 50vH; } }
+    margin-top: 35%;
+    margin-top: 35vH; } }
 @media screen and (max-width: 600px) and (orientation: landscape) {
   #home article h1 {
-    margin-top: 45%;
-    margin-top: 45vH;
-    font-size: 1rem; } }
+    font-size: 1.4rem; } }
 
-@media screen and (min-width: 600px) and (max-width: 768px) {
+@media screen and (min-width: 600px) and (max-width: 768px) and (orientation: portrait) {
   #home article h1 {
-    margin-top: 25%;
-    margin-top: 25vH; } }
+    margin-top: 20%;
+    margin-top: 20vH; } }
 @media screen and (min-width: 600px) and (max-width: 768px) and (orientation: landscape) {
   #home article h1 {
-    margin-top: 50%;
-    margin-top: 50vH;
-    font-size: 1.2rem; } }
+    margin-top: 35%;
+    margin-top: 35vH; } }
 
 @media screen and (max-width: 768px) {
   #home article h1 {
@@ -1156,15 +1131,14 @@ body .footer {
     margin-right: 2em; } }
 @media screen and (min-width: 768px) and (max-width: 992px) {
   #home article h1 {
-    margin: 45% 15%;
-    margin: 45vH 15vW;
-    font-size: 1.6em; } }
+    margin: 0% 15%;
+    margin: 0vH 15vW; } }
 @media screen and (min-width: 992px) and (max-width: 1199px) {
   #home article h1 {
-    margin: 15vH 0; } }
+    margin: 5vH 0; } }
 @media screen and (min-width: 1200px) {
   #home article {
-    margin: 20vH 3em; } }
+    margin: 5vH 3em; } }
 body.leistungen article .thumbnail, #leistungen article .thumbnail {
   background: transparent;
   border: 0;
