--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 /** 
 * Theme Name: bechholdTheme
 * Theme URI: http://www.bechhold.com
+* Text Domain: bechholdtheme
+* Domain Path: /languages
 * Description: Childtheme auf Basis vom HTML5 Blank Theme. 
 * Author: Claudia Hillen 
 * Author URI: http://www.chilliscope.de 
