--- a/sass/base/_grid.scss
+++ b/sass/base/_grid.scss
@@ -29,7 +29,9 @@ body {
 
 .container {
     @extend %clearfix;
-
+    @media screen and (min-width:$screen-smallPad) and (max-width:$screen-lg){
+        
+    }
     @media screen and (min-width:$screen-smallPad) and (max-width:$screen-lg){
         @include outer-container(900px);
     }
