--- a/sass/content/_content.scss
+++ b/sass/content/_content.scss
@@ -122,6 +122,9 @@ article{
             pointer-events: none;
         }
     }
+    #map:hover{
+        cursor:pointer;
+    }
 }
 .contact-buttons{
     text-align: center;
